react-microfrontend-communication-event/apps/k8s/product-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
      - name: product-catalog
        image: gcr.io/<PROJECT_ID>/product-catalog:latest
        ports:
        - containerPort: 80
