react-microfrontend-communication-event/apps/k8s/shopping-cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart
  labels:
    app: shopping-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-cart
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
      - name: shopping-cart
        image: gcr.io/<PROJECT_ID>/shopping-cart:latest
        ports:
        - containerPort: 80
