react-microfrontend-communication-event/apps/k8s/container-app-deployment-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: container-app
  template:
    metadata:
      labels:
        app: container-app
    spec:
      containers:
        - name: container-app
          image: gcr.io/eighth-codex-439113-s2/container-app:latest
          ports:
            - containerPort: 3003

---
apiVersion: v1
kind: Service
metadata:
  name: container-app-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  selector:
    app: container-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP
