react-microfrontend-communication-event/apps/k8s/container-app-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-app-service-np
  namespace: sumanns
  labels:
    app: container-app
spec:
  selector:
    app: container-app  # Matches the deployment's labels
  ports:
    - protocol: TCP
      port: 80             # External port (used by the HTTPRoute)
      targetPort: 3003     # Container port where your app is running
      # nodePort: 30001    # This line is removed to allow automatic assignment
  type: NodePort           # Change the service type to NodePort
