react-microfrontend-communication-event/apps/k8s/container-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-app-service
  namespace: sumanns
  labels:
    app: container-app
spec:
  selector:
    app: container-app  # Matches the deployment's labels
  ports:
    - protocol: TCP
      port: 80             # External port (used by the HTTPRoute)
      targetPort: 3003      # Container port where your app is running
  type: ClusterIP           # Default service type, keeps it internal within the cluster
