react-microfrontend-communication-event/apps/k8s/product-catalog-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service-np
  namespace: sumanns
  labels:
    app: product-catalog
spec:
  selector:
    app: product-catalog  # Matches the deployment's labels
  ports:
    - protocol: TCP
      port: 80             # External port (used by the HTTPRoute)
      targetPort: 3000     # Container port where your app is running
      # nodePort: 30001    # This line is removed to allow automatic assignment
  type: NodePort           # Change the service type to NodePort
