react-microfrontend-communication-event/apps/k8s/shopping-cart-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-cart
  template:
    metadata:
      labels:
        app: shopping-cart
    spec:
      containers:
        - name: shopping-cart
          image: gcr.io/eighth-codex-439113-s2/shopping-cart:latest
          ports:
            - containerPort: 3002

---
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  selector:
    app: shopping-cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
