react-microfrontend-communication-event/apps/k8s/shopping-cart-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-service-np
  namespace: sumanns
  labels:
    app: shopping-cart
spec:
  selector:
    app: shopping-cart  # Matches the deployment's labels
  ports:
    - protocol: TCP
      port: 80             # External port (used by the HTTPRoute)
      targetPort: 3002     # Container port where your app is running
      # nodePort: 30001    # This line is removed to allow automatic assignment
  type: NodePort           # Change the service type to NodePort
