react-microfrontend-communication-event/apps/k8s/shopping-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
spec:
  selector:
    app: shopping-cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
