react-microfrontend-communication-event/apps/k8s/container-app-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: container-route
spec:
  parentRefs:
    - name: frontend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      forwardTo:
        - serviceName: container-app-service
          port: 80
