react-microfrontend-communication-event/apps/k8s/container-app-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: container-app-route
  namespace: sumanns
spec:
  parentRefs:
    - name: microfrontends-gateway
  hostnames:
    - "container-app.sumangcodes.info"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: container-app-service  # Kubernetes Service for microfrontend1
          port: 80
