react-microfrontend-communication-event/apps/k8s/microfrontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfrontend-ingress
  namespace: argocd  # Ensure it matches the services
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GCE ingress controller if on GKE
spec:
  rules:
    - http:
        paths:
          - path: /product-catalog
            pathType: Prefix
            backend:
              service:
                name: product-catalog
                port:
                  number: 80
          - path: /shopping-cart
            pathType: Prefix
            backend:
              service:
                name: shopping-cart
                port:
                  number: 80
          - path: /container-app
            pathType: Prefix
            backend:
              service:
                name: container-app
                port:
                  number: 80
