react-microfrontend-communication-event/apps/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microfrontend-ingress
  namespace: sumanns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sumangcodes.info
        - www.sumangcodes.info
        - container-app.sumangcodes.info
        - product-catalog.sumangcodes.info
        - shopping-cart.sumangcodes.info
      secretName: my-tls-secret
  rules:
    - host: sumangcodes.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: container-app-service-np
                port:
                  number: 80
    - host: www.sumangcodes.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: container-app-service-np
                port:
                  number: 80
    - host: container-app.sumangcodes.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: container-app-service-np
                port:
                  number: 80
    - host: product-catalog.sumangcodes.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-catalog-service-np
                port:
                  number: 80
    - host: shopping-cart.sumangcodes.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-cart-service-np
                port:
                  number: 80
