react-microfrontend-communication-event/apps/k8s/product-catalog-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: product-catalog-route
spec:
  parentRefs:
    - name: frontend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /product-catalog
      backendRefs:
        - name: product-catalog-service
          port: 80
          weight: 1
