react-microfrontend-communication-event/apps/k8s/shopping-cart-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shopping-cart-route
spec:
  parentRefs:
    - name: frontend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /shopping-cart
      forwardTo:
        - serviceName: shopping-cart-service
          port: 80
