react-microfrontend-communication-event/apps/k8s/shopping-cart-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shopping-cart-route
  namespace: sumanns
spec:
  parentRefs:
    - name: microfrontends-gateway
  hostnames:
    - "shopping-cart.sumangcodes.info"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: shopping-cart-service  # Kubernetes Service for microfrontend1
          port: 80
